<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/walk_to_rm"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TableRow
        android:id="@+id/search_building_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="visible" >

        <Spinner
            android:id="@+id/building_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false" >

            <!-- Preview: listitem=@android:layout/simple_spinner_item -->
        </Spinner>

    </TableRow>

    <TableRow
        android:id="@+id/search_room_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="43dp" >

        <EditText
            android:id="@+id/search_bar_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_hint"
            android:inputType="number"
            android:maxLength="8"
            android:singleLine="true" >

            <requestFocus />

        </EditText>

    </TableRow>

    <Button
        android:id="@+id/search_button_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/search" />

</TableLayout>