<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/walk_to_build"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TableRow
        android:id="@+id/buildingRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:visibility="visible" >

        <Spinner
            android:id="@+id/building_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:prompt="@string/building_spinner_prompt" >
        </Spinner>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <AutoCompleteTextView
            android:id="@+id/building_abbrev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="false"
            android:ems="10"
            android:singleLine="true" >

            <requestFocus />
        </AutoCompleteTextView>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

    </TableRow>

    <Button
        android:id="@+id/search_button_building"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/search" />

</TableLayout> 